refactor: worldedit module